improve querying, add category querying, remove injection vuln

--- a/templates/query_form.html
+++ b/templates/query_form.html
@@ -1,6 +1,7 @@
 <form action="{{url_for('part_query')}}" method="get">
     <select name="field">
         <option value="drawer">Drawer</option>
+        <option value="category">Category</option>
         <option value="partnum" selected>Part number</option>
         <option value="description">Description</option>
     </select>
