--- a/templates/query_results.html
+++ b/templates/query_results.html
@@ -4,12 +4,14 @@
     <table>
         <tr>
             <th>Drawer</th>
+            <th>Category</th>
             <th>Part no</th>
             <th>Description</th>
         </tr>
         {% for result in results %}
             <tr>
                 <td>{{result.drawer}}</td>
+                <td>{{result.category}}</td>
                 <td>{{result.partnum}}</td>
                 <td>{{result.description}}</td>
             </tr>
